--- a/.env
+++ b/.env
@@ -5,6 +5,8 @@ PORT = 4200
 MONGODBCON = 'mongodb://127.0.0.1/professions'
 NODE_ENV = "dev"
 API_VERSION = v1
+API_LOCALHOST = 'http://localhost:4200';
+API_RESOURCE = '/api/' + $API_VERSION + '/professions';
 
 #staging
 
