--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "api-profession",
+  "name": "api-profession-type",
   "version": "1.0.0",
   "description": "Profession CRUD administration.",
   "main": "server.js",
@@ -11,7 +11,7 @@
   "license": "ISC",
   "repository": {
     "type": "git",
-    "url": "git://github.com/sebas663/api-profession.git"
+    "url": "git://github.com/sebas663/api-professionType.git"
   },
   "dependencies": {
     "body-parser": "^1.13.3",
